--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+body{
+  background: linear-gradient(to bottom, #001f3f, #003366);
+  color: #fff; 
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
