--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,21 @@ body {
   color: #000080
 }
 
+.title {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  padding: 1em;
+  margin-bottom: 2em;
+  background-color: rgb(9, 17, 45);
+  color: #fff;
+  height: 3rem;
+  margin-top: 3rem;
+  position: sticky;
+}
+
 .little-items {
   color: #333333
 }
